--- a/NRG-ENGR-jekyll/_layouts/home.html
+++ b/NRG-ENGR-jekyll/_layouts/home.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} - NRG Engineering</title>
     <link rel="stylesheet" href="/assets/css/output.css">
-   <!--
-    <script src="/assets/js/hamburgerMenu.js"></script>-->
+    <script src="/assets/js/hamburgerMenu.js"></script>
     <!-- Tailwind CSS Output -->
 </head>
 <body class="bg-gray-100 font-sans">
