restored default.html layout

--- a/NRG-ENGR-jekyll/_layouts/default.html
+++ b/NRG-ENGR-jekyll/_layouts/default.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} - NRG Engineering</title>
     <link rel="stylesheet" href="/assets/css/output.css">
-    <script src="/assets/js/hamburgerMenu.js"></script>
-    Tailwind CSS Output 
+    <!-- <script src="/assets/js/hamburgerMenu.js"></script> -->
+    <!-- Tailwind CSS Output  -->
 
-</head> -->
-    {% include configuration.html %}
+</head> 
+    <!-- {% include configuration.html %} -->
 <body class="bg-gray-100 font-sans">
 
     <!-- Include the splash screen for login and TOS -->
